Bug 279513 - Amarok add track into the playlist by double click on the arrow in the collection tree view.
Summary: Amarok add track into the playlist by double click on the arrow in the collec...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6-git
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-06 08:33 UTC by Alexander
Modified: 2013-03-05 16:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
Arrows, which I meant. (7.22 KB, image/png)
2011-08-06 08:33 UTC, Alexander
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2011-08-06 08:33:04 UTC
Created attachment 62609 [details]
Arrows, which I meant.

Version:           2.4.3 (using KDE 4.7.0) 
OS:                Linux

After I did two fast click on the arrow to expand and then hide an album item in the amarok's collection browser, it will add this item into the playlist. But actually it shouldn't, because I just want to review the album content and hide it back.

This amarok's behavior is very annoying.

Reproducible: Always

Steps to Reproduce:
Open the amarok's collection tree view and make two fast clicks on any items to expand and then hide its content fast.


Expected Results:  
In any case, the area where arrows have been placed should not behave like tree item itself. I mean, It should not add track into playlist by double click event. It just should expand/collapse items, that's all.
Comment 1 Myriam Schweingruber 2011-08-07 10:42:54 UTC
Well a double click is the default action to add something to the playlist. If you don´t want this to happen, just do a single click on the arrow to expand and collapse again.
Comment 2 Alexander 2011-08-07 14:23:09 UTC
Please, if you don't understanding what I talking about, ask someone other before closing it. 95% of reports I created is confirmed, but only after long long explanation to you. I remember I huge number of your answers, where you told me about "default behavior". What you assuming about this your "default behavior"? Default behavior was to show menu in new window, default behavior was to show black square instead if video, default behavior was to show video in separate window. My god, what you talking about? What is this default behavior?

And what if this behavior is wrong? Could I create a bug report if I thinking that this is wrong? Yes, I could, so, please, don't touch it before someone more competent than you don't overview this.

So, I repeating myself especially for you. I told about the arrows, not about the whole item. And you absolutely do not need to repeating my words and tell me about default behavior or something else, I already know it and it is the wrong behavior. Please, understand that it actually is why I have created this report.

Arrow should ONLY expand/collapse item and there should not be matter have I did single click or double click, I mean in any case amarok should not add something into the playlist when I clicking on arrow (see how it works in dolphin in the tree view mode). It is annoying behavior because very often I don't want to add tracks into the playlist, but only want to expand and collapse item fast.

In any case, I writing reports to make amarok better, because I using it and want to make it better. If you don't understand what I talking about, please, ask someone else, lets it explain to you. You should not closing reports before at least a few people don't review it, because in that case you only disclose your own opinion and you approving only things you agree with and this is monopoly. If something does not prevents you it does not mean that it could not prevents to someone else.

You are wrong if you thinking that it will be better if you close all the reports before at lest someone other will have time to look at it.

Lastly, to make sure you understand what I mean — arrows should ONLY expand/collapse items, this is its direct mission. Amarok should not add tracks into the playlist when I clicking on arrow.
Comment 3 Myriam Schweingruber 2012-02-13 16:15:32 UTC
Still valid with Amarok 2.5
Comment 4 Ralf Engels 2013-02-20 16:49:58 UTC
Git commit 2310a19341e583fcba8440ffec15b5fb58b3e2a6 by Ralf Engels.
Committed on 20/02/2013 at 17:39.
Pushed by rengels into branch 'master'.

Fix: add track to playlist by double click on arrow in the collection
FIXED-IN: 2.8

M  +9    -4    src/browsers/CollectionTreeView.cpp

http://commits.kde.org/amarok/2310a19341e583fcba8440ffec15b5fb58b3e2a6
Comment 5 Matěj Laitl 2013-03-05 16:41:54 UTC
Git commit 40b1e87cad749a806098d5668fc5f5bc59ee6c7d by Matěj Laitl.
Committed on 05/03/2013 at 17:33.
Pushed by laitl into branch 'master'.

{CollectionTree,PlaylistBrowser}View: fix doubleclick behaviour

Commit 2310a19341e583fc made it impossible to add an item to playlist
by double click in double click mode. This patch restores and tweaks
the original algorithm. (to keep bug 279513 fixed)

Used ideas from a patch by Yichao Yu, but implemented differently.

P.S.: Ralf, event heard about QRect::contains()? :-)

REVIEW: 109162

M  +8    -10   src/browsers/CollectionTreeView.cpp
M  +6    -3    src/browsers/playlistbrowser/PlaylistBrowserView.cpp

http://commits.kde.org/amarok/40b1e87cad749a806098d5668fc5f5bc59ee6c7d