Fix: add track to playlist by double click on arrow in the collection

BUG: 279513
FIXED-IN: 2.8